<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackjack_bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_textview"
            android:fontFamily="serif"
            android:textSize="60sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/back_cards_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/back_textview"
            android:fontFamily="serif"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:linksClickable="true"
            />

        <TextView
            android:text="@string/back_cards_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/back_license_textview"
            android:fontFamily="serif"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:linksClickable="true"/>

        <TextView
            android:text="@string/front_cards_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/front_textview"
            android:fontFamily="serif"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:textAlignment="center" />

        <TextView
            android:text="@string/front_cards_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/front_license_textview"
            android:fontFamily="serif"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:linksClickable="true"/>
    </LinearLayout>
</ScrollView>